--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,19 +95,19 @@ html {
 }
 
 .color-bar__segment--green {
-  background-color: green;
+  background-color: #82C596;
 }
 
 .color-bar__segment--yellow {
-  background-color: yellow;
+  background-color: #ffcc00;
 }
 
 .color-bar__segment--orange {
-  background-color: orange;
+  background-color: #F5A071;
 }
 
 .color-bar__segment--red {
-  background-color: red;
+  background-color: #E76F61;
 }
 
 .color-bar__list {
@@ -129,19 +129,19 @@ html {
 }
 
 .color-bar__bullet--green {
-  background-color: green;
+  background-color: #82C596;
 }
 
 .color-bar__bullet--yellow {
-  background-color: yellow;
+  background-color: #ffcc00;
 }
 
 .color-bar__bullet--orange {
-  background-color: orange;
+  background-color: #F5A071;
 }
 
 .color-bar__bullet--red {
-  background-color: red;
+  background-color: #E76F61;
 }
 
 /* end of map */
@@ -149,7 +149,7 @@ html {
 /* start of table */
 .table-container {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   margin-bottom: 2rem;
   width: 50%;
   margin: 0 auto;
@@ -158,18 +158,22 @@ html {
 }
 
 table {
-  border-collapse: collapse;
+  border-collapse: separate;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.12),
+    0 4px 8px rgba(0, 0, 0, 0.14);
+  font-family: "Roboto", sans-serif;
 }
 
 td,
 th {
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 12px 15px;
 }
 
 th {
-  background-color: aliceblue;
-  color: black;
+  text-align: center;
+  background-color: #2c3e50;
+  color: white;
   font-weight: bold;
   border-bottom: 3px solid;
 }
@@ -192,7 +196,7 @@ table th:nth-child(4) {
 }
 table td:nth-child(5),
 table th:nth-child(5) {
-  width: 5%;
+  width: 20%;
 }
 table td:nth-child(6),
 table th:nth-child(6) {
@@ -200,14 +204,18 @@ table th:nth-child(6) {
 }
 table td:nth-child(7),
 table th:nth-child(7) {
-  width: 10%;
+  width: 20%;
 }
 
-table tbody tr:first-child td:first-child {
+table tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+table th:first-child {
   border-top-left-radius: 10px;
 }
 
-table tbody tr:first-child td:last-child {
+table th:last-child {
   border-top-right-radius: 10px;
 }
 
@@ -218,7 +226,6 @@ table tbody tr:last-child td:first-child {
 table tbody tr:last-child td:last-child {
   border-bottom-right-radius: 10px;
 }
-
 
 .pagination {
   display: flex;
@@ -279,7 +286,3 @@ table tbody tr:last-child td:last-child {
 }
 
 /* end of table */
-
-/* start line chart */
-
-/* end line chart */
