--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  background: linear-gradient(135deg, #f0f0f0 0%, #d9d9d9 100%);
+  background: linear-gradient(135deg, #f9f9f9 0%, #ebebeb 70%);
   font-family: "Poppins", sans-serif;
 }
 
@@ -166,7 +166,7 @@ table {
 
 td,
 th {
-  border: 1px solid #ccc;
+  border: 1px solid black;
   padding: 12px 15px;
 }
 
